data/derived/comb/progs/unify/prog8906.ml.out
Characters 8-19:
  let _ = digitsOfInt -1341;;
          ^^^^^^^^^^^
Error: This expression has type 'a -> 'b
       but an expression was expected of type int
